# Mafia-TP-project

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp
GameRoom/: GameRoom.cpp  GameRoom.h
PlayRoom/: PlayRoom.cpp  PlayRoom.h
Player/: Citizen.cpp  Citizen.h  GameHost.cpp  GameHost.h  Mafia.cpp  Mafia.h  Player.cpp  Player.h
client/: CMakeLists.txt  main.cpp
client/client/: CMakeLists.txt  main.cpp
client/client/lib/: CMakeLists.txt
client/client/lib/client_lib/: CMakeLists.txt
client/client/lib/client_lib/include/: client.h  myqueue.h
client/client/lib/client_lib/src/: client.cpp
client/client/lib/messages/: CMakeLists.txt
client/client/lib/messages/include/: messages.h
client/client/lib/messages/src/: messages.cpp
client/client/lib/ui/: CMakeLists.txt
client/client/lib/ui/abstract/: CMakeLists.txt
client/client/lib/ui/abstract/include/: abstractfragment.h
client/client/lib/ui/abstract/src/: abstractfragment.cpp
client/client/lib/ui/fragments/: CMakeLists.txt
client/client/lib/ui/fragments/include/: abstractfragment.h  admingamefragment.cpp  admingamefragment.h  client_impl.h  creatingfragment.h  fragmentnavigator.h  gamefragment.h  mainfragment.h  mainwindow.h  optionsfragment.h  playerbox.h  resolver.h  screensfactory.h  waitingfragment.h
client/client/lib/ui/fragments/src/: abstractfragment.cpp  abstractscreensfactory.cpp  admingamefragment.cpp  creatingfragment.cpp  fragmentnavigator.cpp  gamefragment.cpp  mainfragment.cpp  mainwindow.cpp  optionsfragment.cpp  playerbox.cpp  resolver.cpp  waitingfragment.cpp
client/client/lib/ui/mmm/: CMakeLists.txt
client/client/lib/ui/mmm/include/: resolver.h
client/client/lib/ui/mmm/src/: resolver.cpp
client/include/: client.h  myqueue.h
client/messages/include/: messages.h
client/messages/src/: messages.cpp
client/src/: client.cpp
client/ui/navigation/include/: navigator.h
client/ui/navigation/src/: AbstractFragment.cpp  AbstractScreenFactory.cpp  ScreenFactory.cpp  navigator.cpp
client/webcam/: CMakeLists.txt  main.cpp
client/webcam/include/: webcam.h
client/webcam/src/: webcam.cpp
headers/: Citizen.h  GameHost.h  GameProcess.h  Mafia.h  Player.h  Queue.h  RoomInfo.h
lib/: CMakeLists.txt
lib/game_logic/: CMakeLists.txt
lib/game_logic/include/: room.hpp  user.hpp
lib/logic/: CMakeLists.txt  main.cpp
lib/logic/PlayRoom/: PlayRoom.cpp  PlayRoom.h
lib/logic/Player/: Citizen.cpp  GameHost.cpp  Mafia.cpp  Player.cpp  Player.h
lib/message/include/: messages.hpp
lib/message/src/: messages.cpp
lib/message/test/: CMakeLists.txt
lib/server/: CMakeLists.txt
lib/server/include/: base.hpp  base_queue.hpp  communication.hpp  connection.hpp  game_connection.hpp  gameroom.hpp  server.hpp  user.h  user.hpp
lib/server/src/: base_queue.cpp  connection.cpp  game_connection.cpp  server.cpp
server/: CMakeLists.txt  main.cpp
server/lib/logic/PlayRoom/: PlayRoom.cpp
server/lib/logic/Player/: Mafia.cpp
server/lib/message/: CMakeLists.txt
server/lib/message/include/: messages.hpp
server/lib/message/src/: messages.cpp
server/lib/message/test/src/: main.cpp
server/lib/server/include/: base.hpp  base_queue.hpp  game_connection.hpp  gameroom.hpp  server.hpp
server/lib/server/src/: connection.cpp  game_connection.cpp  server.cpp
server/lib/server/test/: CMakeLists.txt
server/src/: main.cpp
server/tools/gtest/googletest/cmake/: internal_utils.cmake
sources/: Citizen.cpp
src/: main.cpp
tests/: testGameHost.cpp  testGameProcess.cpp  testMafia.cpp  testPlayer.cpp  testQueue.cpp  testRoomInfo.cpp
ui/: CMakeLists.txt  client.pro
ui/abstract/: CMakeLists.txt
ui/abstract/include/: abstractfragment.h  abstractscreensfactory.h  fragmentnavigator.h
ui/abstract/src/: abstractfragment.cpp  abstractscreensfactory.cpp  fragmentnavigator.cpp
ui/client/include/: asyncgameclientconnector.h  gameclient.h  igameclient.h  igameclientlistener.h
ui/client/src/: asyncgameclientconnector.cpp  gameclient.cpp  igameclient.cpp  igameclientlistener.cpp
ui/fragments/: CMakeLists.txt
ui/fragments/include/: creatingfragment.h  fragmentnavigator.h  gamefragment.h  mainfragment.h  mainwindow.h  optionsfragment.h  waitingfragment.h
ui/fragments/src/: creatingfragment.cpp  gamefragment.cpp  mainfragment.cpp  optionsfragment.cpp  screensfactory.cpp  waitingfragment.cpp
ui/gameElements/include/: ingameplayer.h
ui/gameElements/src/: ingameplayer.cpp
ui/main/: CMakeLists.txt
ui/main/include/: mainwindow.h  screensfactory.h
ui/main/scr/: screensfactory.cpp
ui/main/src/: mainwindow.cpp  screensfactory.cpp
ui/navigation/include/: AbstractFragment.h  AbstractScreenFactory.h  ScreenFactory.h
ui_lib/: client.pro  mainwindow.cpp  mainwindow.h  screenfactory.cpp  screenfactory.h
ui_lib/base/: navigator.cpp  navigator.h
ui_lib/fragments/: gamefragment.cpp  gamefragment.h  mainfragment.cpp  mainfragment.h  optionsfragment.cpp  optionsfragment.h
webcam/: CMakeLists.txt
webcam/include/: webcam.h
webcam/src/: webcam.cpp
webcam_ui/: CMakeLists.txt  main.cpp
webcam_ui/include/: gamefragment.h
